--- a/welcome/index.html
+++ b/welcome/index.html
@@ -20,15 +20,15 @@
   <link data-n-head="1" data-hid="apple-touch-icon" rel="apple-touch-icon" href="nggalaxies/_nuxt/icons/icon_512x512.b0a1a1.png"
     sizes="512x512">
   <link data-n-head="1" rel="manifest" href="../nggalaxies/_nuxt/manifest.ef3fc7fa.json" data-hid="manifest">
-  <script data-n-head="1" src="../bootstrap.bundle.min.js"
+  <script data-n-head="1" src="nggalaxies/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
     <base href="/">
-  <script data-n-head="1" src="nggalaxies/eec3c710b7.js" crossorigin="anonymous"></script>
-  <link rel="preload" href="/_nuxt/b8b5f57.js" as="script">
-  <link rel="preload" href="/_nuxt/473a0b1.js" as="script">
-  <link rel="preload" href="/_nuxt/97d259b.js" as="script">
-  <link rel="preload" href="/_nuxt/56eae07.js" as="script">
+  <script data-n-head="1" src="nggalaxies/nggalaxies/eec3c710b7.js" crossorigin="anonymous"></script>
+  <link rel="preload" href="../nggalaxies/_nuxt/b8b5f57.js" as="script">
+  <link rel="preload" href="../nggalaxies/_nuxt/473a0b1.js" as="script">
+  <link rel="preload" href="../nggalaxies/_nuxt/97d259b.js" as="script">
+  <link rel="preload" href="../nggalaxies/_nuxt/56eae07.js" as="script">
 </head>
 
 <body>
