--- a/welcome/index.html
+++ b/welcome/index.html
@@ -19,12 +19,12 @@
   <link data-n-head="1" data-hid="shortcut-icon" rel="shortcut icon" href="nggalaxies/_nuxt/icons/icon_64x64.b0a1a1.png">
   <link data-n-head="1" data-hid="apple-touch-icon" rel="apple-touch-icon" href="nggalaxies/_nuxt/icons/icon_512x512.b0a1a1.png"
     sizes="512x512">
-  <link data-n-head="1" rel="manifest" href="../nggalaxies/_nuxt/manifest.ef3fc7fa.json" data-hid="manifest">
-  <script data-n-head="1" src="nggalaxies/bootstrap.bundle.min.js"
+  <link data-n-head="1" rel="manifest" href="nggalaxies/_nuxt/manifest.ef3fc7fa.json" data-hid="manifest">
+  <script data-n-head="1" src="../bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
     <base href="/">
-  <script data-n-head="1" src="nggalaxies/nggalaxies/eec3c710b7.js" crossorigin="anonymous"></script>
+  <script data-n-head="1" src="../eec3c710b7.js" crossorigin="anonymous"></script>
   <link rel="preload" href="../nggalaxies/_nuxt/b8b5f57.js" as="script">
   <link rel="preload" href="../nggalaxies/_nuxt/473a0b1.js" as="script">
   <link rel="preload" href="../nggalaxies/_nuxt/97d259b.js" as="script">
@@ -161,6 +161,23 @@
   <script src="../nggalaxies/_nuxt/473a0b1.js"></script>
   <script src="../nggalaxies/_nuxt/97d259b.js"></script>
   <script src="../nggalaxies/_nuxt/56eae07.js"></script>
+  <!--客服 开始-->
+<script src="//g8hh.com/static/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//g8hh.com/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.com/static/js/kf.js"></script>
+<!-- 客服 结束 -->
+<!--站长统计--> 
+<div style="display: none">
+  <script>
+var _hmt = _hmt || [];
+(function() {
+var hm = document.createElement("script");
+hm.src = "https://hm.baidu.com/hm.js?028b1b5f659ed138230f4cafd7ad0dfc";
+var s = document.getElementsByTagName("script")[0]; 
+s.parentNode.insertBefore(hm, s);
+})();
+</script>
+  </div>
 </body>
 
 </html>
