--- a/game/index.html
+++ b/game/index.html
@@ -32,6 +32,8 @@
 </head>
 
 <body>
+  <script src="../chs.js"></script>
+<script src="//g8hh.com/zh/core.js"></script>
   <div id="__nuxt">
     <style>
       #nuxt-loading {
